--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="az">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/images/nf_logo.png" /> -->
+    <link rel="icon" href="./assets/images/favicon/logo-f.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NF education 2019 cu ildən birçox universitetlərlə əməkdaşlıq edir və tələbə qəbulu həyata keçirir . Bu, ali təhsil və beynəlxalq təhsil sahəsində həyatımızda ən mühüm dönüş nöqtələrindən birini təmsil edir. Bununla belə, xaricdə təhsil almaq, yeni mədəniyyətə uyğunlaşmaq və fərqli bir ölkədə inkişaf etmək bir çox tələbələr üçün maraqlı, eyni zamanda mürəkkəb prosesdir. Burada xaricdə təhsil verən hörmətli və təcrübəli şirkət olan NF education işə düşür."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./assets/images/favicon/logo-f.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link
+      rel="stylesheet"
+      href="https://khankisiyevravan.github.io/slider-js/assets/index.fca86069.css"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +30,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>NF Education</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +52,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link
+      rel="modulepreload"
+      href="https://khankisiyevravan.github.io/slider-js/assets/vendor.688a9bfa.js"
+    />
+    <script
+      type="module"
+      src="https://khankisiyevravan.github.io/slider-js/assets/index.ff8f4572.js"
+    ></script>
   </body>
 </html>
